[package]
name = "rebuild-world-to-epub"
version = "0.1.0"
authors = ["Aleksey Pestov <dreamport.vr.2@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
indicatif = "0.15.0"
zip = "0.5.11"

[profile.release]
lto = true